# CMakeTest

./: .gitignore  CMakeLists.txt  README.md
foo/: CMakeLists.txt
foo/core/: CMakeLists.txt
foo/extension/test/: CMakeLists.txt
